--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <p class="q">Люблю делать красивые фото и устраивать фотосесии</p>
             </article>
             <div class="divider wow fadeInLeftSmall" data-wow-delay=".2s"></div>
-            <p class="wow fadeInLeftSmall" data-wow-delay=".3s">Всем привет, меня зовут Анастасия, я закончила курсы фотографии в фотостудии-школе «Foto-аз» мои дипломы вы можете увидеть на этом сайте. Также на этом сайте вы можете посмотреть мои последние фотографии, для заказа фотосессии для себя или своей семьи, обращайтесь по <a href="tel:+380952485643"> номеру телефона</a> или в социальных сетях. Буду рада поработать с каждым из вас🤗
+            <p class="wow fadeInLeftSmall" data-wow-delay=".3s">Всем привет, меня зовут Анастасия, я закончила курсы фотографии в фотостудии-школе «Foto-аз» мои дипломы вы можете увидеть на этом сайте. Также здесь вы можете посмотреть мои последние фотографии, для заказа фотосессии для себя или своей семьи, обращайтесь по <a href="tel:+380952485643"> номеру телефона</a> или в социальных сетях. Буду рада поработать с каждым из вас🤗
           </div>
         </div>
         <div class="col-md-6 col-sm-12 offset-md-1 wow fadeInRightSmall">
